--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-horizontal-scrolling-menu": "^2.7.1",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
