--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/leonardo-bravop/Dream-Screen#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "concurrently": "^7.1.0",
     "cookie-parser": "^1.4.6",
